--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -4,7 +4,7 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Education</a>
+  <a class="navbar-brand" id="logo" href="#">Education</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,10 +15,10 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#aboutid">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Service</a>
+        <a class="nav-link" href="#serviceid">Service</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">portfolio</a>
