--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    {{!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css"> --}}
+    
  
     <title>Document</title>
 </head>
@@ -18,11 +18,11 @@
     <div class="row">
       <div class="col-md-10 col-12 mx-auto">
         <div class="row">
-           <div class="col-md-6 col-12 hero-text order-md-0 order-1">
+           <div class="col-md-6 col-12 hero-text order-md-0 order-1 d-flex justify-content-center align-items-start flex-column">
             <h1>WE WILL HELP YOU TO</h1>
               <h1>GROW YOUR BUSSINESS</h1>
                 <P>we are the team of <span class="bold-style">professional develper</span></P>
-                  <button class="btn-style btn-primary">read me</button>
+                  <button class="btn-style">read me</button>
             </div>
 {{!-- right side --}}
            <div class="col-md-6 col-12 hero-text order-md-1 order-0">
@@ -38,6 +38,18 @@
       
 
   {{!-- hero section end --}}
+
+
+  {{!-- About us page start --}}
+  
+    {{>about}}
+  {{!-- About us page end--}}
+
+
+  {{!-- Service page start --}}
+  
+    {{>service}}
+  {{!-- service page end --}}
    
     <script src="../jq/jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.js" type="text/javascript"></script>
