--- a/templates/partials/service.hbs
+++ b/templates/partials/service.hbs
@@ -20,12 +20,12 @@
             </div>
               <div class="col-md-4">
                 <div class="box">
-                    <div class="our-services settings">
+                    <div class="our-services speedup">
                         <div class="icon">
                             <img src="https://i.imgur.com/6NKPrhO.png" alt="">
                         </div>
                         <h4>
-                            Settings
+                            Speed Up
                         </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptate.</p>
                     </div>
@@ -34,12 +34,12 @@
             </div>
               <div class="col-md-4">
                 <div class="box">
-                    <div class="our-services settings">
+                    <div class="our-services privacy">
                         <div class="icon">
-                            <img src="https://i.imgur.com/6NKPrhO.png" alt="">
+                            <img src="https://i.imgur.com/AgyneKA.png" alt="">
                         </div>
                         <h4>
-                            Settings
+                            privacy
                         </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptate.</p>
                     </div>
@@ -48,12 +48,12 @@
             </div>
               <div class="col-md-4">
                 <div class="box">
-                    <div class="our-services settings">
+                    <div class="our-services backups">
                         <div class="icon">
-                            <img src="https://i.imgur.com/6NKPrhO.png" alt="">
+                            <img src="https://i.imgur.com/vdH9LKi.png" alt="">
                         </div>
                         <h4>
-                            Settings
+                            Backups
                         </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptate.</p>
                     </div>
@@ -62,12 +62,12 @@
             </div>
               <div class="col-md-4">
                 <div class="box">
-                    <div class="our-services settings">
+                    <div class="our-services ssl">
                         <div class="icon">
-                            <img src="https://i.imgur.com/6NKPrhO.png" alt="">
+                            <img src="https://i.imgur.com/v6OnUqu.png" alt="">
                         </div>
                         <h4>
-                            Settings
+                            SSL
                         </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptate.</p>
                     </div>
@@ -76,12 +76,12 @@
             </div>
               <div class="col-md-4">
                 <div class="box">
-                    <div class="our-services settings">
+                    <div class="our-services database">
                         <div class="icon">
-                            <img src="https://i.imgur.com/6NKPrhO.png" alt="">
+                            <img src="https://i.imgur.com/VzjZw9M.png" alt="">
                         </div>
                         <h4>
-                            Settings
+                            database
                         </h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, voluptate.</p>
                     </div>
