--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -50,6 +50,16 @@
   
     {{>service}}
   {{!-- service page end --}}
+
+   {{!--map page start --}}
+  
+    {{>maps}}
+  {{!-- map page end --}}
+
+   {{!--contact page start --}}
+  
+    {{>contact}}
+  {{!-- contact page end --}}
    
     <script src="../jq/jquery.js" type="text/javascript"></script>
     <script src="../js/bootstrap.js" type="text/javascript"></script>
