our website is ready for publish

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     
  
-    <title>Document</title>
+    <title>Bussiness Home</title>
 </head>
 <body>
 
