--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,22 +34,22 @@ h3 {
 
 .navbar-style {
   background-color: #f8f9fa;
-  box-shadow: 2px 4px 13px 1px rgba(8, 8, 8, 0.04);
+  box-shadow: 2px 4px 13px 1px rgba(165, 23, 23, 0.04);
 }
 
 #logo {
   display: initial;
-  font-weight: 600;
-  font-size: 3.5rem;
+  font-weight: bold;
+  font-size: 4.5rem;
   letter-spacing: 1px;
   text-transform: capitalize;
-  color: #fd5c63;
+  color: #ec615b;
   text-shadow: 2px 5px 3px rgba(0, 0, 0, 0.06);
   padding: 0;
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: #525252;
+  color: rgb(252, 149, 31);
   text-transform: capitalize;
   letter-spacing: 0.1rem;
   padding-left: 1rem;
@@ -57,7 +57,7 @@ h3 {
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #fd5c63;
+  color: #ec615b;
 }
 
 /* our hero sections  */
@@ -74,7 +74,7 @@ h3 {
 
 .hero-text h1:nth-child(2) {
   font-weight: bold;
-  color: #5222d0;
+  color: #ec615b;
 }
 
 .hero-text p,
@@ -101,7 +101,7 @@ label {
   text-transform: uppercase;
   letter-spacing: 1px;
   border: 2px solid #fff;
-  background: #ec615b;
+  background:#f95a55 ;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
   -o-transition: 0.5s all;
@@ -119,7 +119,7 @@ label {
 .service-style .main-heading,
 .contact-style .main-heading {
   font-size: 5rem;
-  color: #fd5c63;
+  color: #ec615b;
   letter-spacing: 1px;
   font-weight: bold;
 }
@@ -154,7 +154,7 @@ label {
   min-height: 198px;
   text-align: center;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: rgb(191, 251, 192);
   transition: all 0.4s ease-in-out;
   box-shadow: 0 0 25px 0 rgba(20, 27, 202, 0.17);
 }
@@ -196,7 +196,7 @@ label {
 .backups:hover {
   box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.2);
   cursor: pointer;
-  background-image: linear-gradient(-45deg, #fd7f30 0%, #fdb642 50%);
+  background-image: linear-gradient(-45deg, #ea7f14 0%, #fdb642 50%);
 }
 
 .ssl:hover {
