--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -3,8 +3,8 @@
   <div class="col-md-10 col-12 mx-auto">
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" id="logo" href="#">Education</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+  <a class="navbar-brand" id="logo" href="#">Bussiness Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -21,7 +21,7 @@
         <a class="nav-link" href="#serviceid">Service</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">portfolio</a>
+        <a class="nav-link" href="#locationid">Location</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#contactid">contact</a>
