--- a/templates/partials/service.hbs
+++ b/templates/partials/service.hbs
@@ -22,7 +22,7 @@
                 <div class="box">
                     <div class="our-services speedup">
                         <div class="icon">
-                            <img src="https://i.imgur.com/6NKPrhO.png" alt="">
+                            <img src="https://i.imgur.com/vdH9LKi.png" alt="">
                         </div>
                         <h4>
                             Speed Up
